WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
281234
[JSC] Fix instanceof by introducing hasInstanceOrPrototype
https://bugs.webkit.org/show_bug.cgi?id=281234
Summary
[JSC] Fix instanceof by introducing hasInstanceOrPrototype
Yijia Huang
Reported
2024-10-10 11:13:31 PDT
...
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-10-10 11:13:41 PDT
<
rdar://problem/137694028
>
Yijia Huang
Comment 2
2024-10-10 11:23:18 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/34987
EWS
Comment 3
2024-10-10 19:05:14 PDT
Committed
285003@main
(d36c972c6b94): <
https://commits.webkit.org/285003@main
> Reviewed commits have been landed. Closing PR #34987 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug