[JSC] Fix instanceof by introducing hasInstanceOrPrototype https://bugs.webkit.org/show_bug.cgi?id=281234 rdar://137694028

Reviewed by Yusuke Suzuki.

The fused `instanceof` bytecode was introduced at [1].

dst = value instanceof constructor

Previously, we store the temporary hasInstance and prototype values
to the `dst`. That is wrong since the `dst` may be alias of
`value`. So, storing those temporary values to `dst` may clobber `value`.
This patch fixes this issue by introducing `hasInstanceValueProfile` for
the temporary value storage.

[1] https://commits.webkit.org/284176@main

* JSTests/stress/instanceof-dst-value-alias.js: Added.
(FileLocation):
(test):
* Source/JavaScriptCore/bytecode/BytecodeList.rb:
* Source/JavaScriptCore/bytecode/BytecodeUseDef.cpp:
(JSC::computeUsesForBytecodeIndexImpl):
(JSC::computeDefsForBytecodeIndexImpl):
* Source/JavaScriptCore/bytecompiler/BytecodeGenerator.cpp:
(JSC::BytecodeGenerator::emitInstanceof):
* Source/JavaScriptCore/bytecompiler/BytecodeGenerator.h:
* Source/JavaScriptCore/bytecompiler/NodesCodegen.cpp:
(JSC::InstanceOfNode::emitBytecode):
* Source/JavaScriptCore/dfg/DFGByteCodeParser.cpp:
(JSC::DFG::ByteCodeParser::parseBlock):
* Source/JavaScriptCore/llint/LLIntSlowPaths.cpp:
(JSC::LLInt::LLINT_SLOW_PATH_DECL):
(JSC::LLInt::handleOpInstanceofCheckpoint):
* Source/JavaScriptCore/llint/LowLevelInterpreter64.asm:
* Source/JavaScriptCore/runtime/CommonSlowPaths.cpp:
(JSC::JSC_DEFINE_COMMON_SLOW_PATH):

Canonical link: https://commits.webkit.org/285003@main