Source/JavaScriptCore/runtime/CommonSlowPaths.cpp
@@ -764,7 +764,7 @@ JSC_DEFINE_COMMON_SLOW_PATH(slow_path_instanceof_custom_from_instanceof)
     auto bytecode = pc->as<OpInstanceof>();
     auto value = GET_C(bytecode.m_value).jsValue();
     auto constructor = GET_C(bytecode.m_constructor).jsValue();
-    auto hasInstanceValue = GET_C(bytecode.m_dst).jsValue();
+    auto hasInstanceValue = GET_C(bytecode.m_hasInstanceOrPrototype).jsValue();
 
     ASSERT(constructor.isObject());
     ASSERT(hasInstanceValue != globalObject->functionProtoHasInstanceSymbolFunction() || !constructor.getObject()->structure()->typeInfo().implementsDefaultHasInstance());
